# klendathu

./: .gitignore  Cargo.toml  README.md
src/: application.rs  constants.rs  main.rs  utils.rs
src/api/: router.rs
src/cli/: api.rs  client.rs  mod.rs  parser.rs
src/config/: config.rs  environment.rs  mod.rs
src/db/: db.rs
src/migrations/: m20230525_000001_create_clients.rs  m20230525_000002_create_projects.rs  m20230525_000003_create_scopes.rs  m20230525_000004_create_assets.rs  migrator.rs  mod.rs
