[package]
name = "klendathu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
clap = {version = "4.3.0", features = ["cargo"]}
directories = "5.0.1"
futures = "0.3.28"
sea-orm = {version = "^0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = "0.11.3"
serde = { version = "1.0.163", features = ["derive"]}
tokio = {version = "1.28.1", features = ["full"]}
toml = "0.7.4"

